# audio2report

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.cpu  Dockerfile.gpu  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
audio2report/: __init__.py  _log.py  config.py  models.py  utils.py
audio2report/alignment/: anchors.py  timeline.py
audio2report/cli/: main.py
audio2report/deduplication/: matching.py  scoring.py
audio2report/diarization/: roles.py
audio2report/ingestion/: discovery.py  normalize.py
audio2report/llm/: base.py  ollama_provider.py  openai_provider.py  report.py
audio2report/llm/templates/: audit_report.txt
audio2report/output/: writers.py
audio2report/pipeline/: dual.py  single.py
audio2report/postprocessing/: cleanup.py
audio2report/transcription/: base.py  whisperx_backend.py
audio2report/ui/: app.py
configs/: cpu_fast.yaml  default.yaml  gpu_full.yaml
tests/: conftest.py  helpers.py
tests/integration/: test_pipeline_dual.py
tests/unit/: test_alignment.py  test_config.py  test_deduplication.py  test_llm.py  test_postprocessing.py
