[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio2report"
version = "0.1.0"
description = "Dual-mic cross-talk deduplication and transcription pipeline for audit-quality meeting records"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "alex8642", url = "https://github.com/alex8642" }]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "typer[all]>=0.12",
    "pyyaml>=6.0",
    "soundfile>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
whisperx = ["whisperx"]
diarize   = ["pyannote.audio>=3.0"]
llm       = ["openai>=1.0", "httpx>=0.25"]
ui        = ["streamlit>=1.30"]
full      = ["audio2report[whisperx,diarize,llm,ui]"]
dev       = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]

[project.scripts]
audio2report = "audio2report.cli.main:app"
audio2report-ui = "audio2report.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["audio2report"]
include = ["audio2report/configs/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
